kube-objects/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: auth-web
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-web
        tier: backend
    spec:
      containers:
        - name: backend
          image: holyjack/auth-web-backend:0.0.5
          ports:
            - name: http
              containerPort: 80
