kube-objects/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-auth-ingress
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/ingress.class: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    # kubernetes.io/ingress.global-static-ip-name: web-ip
    cert-manager.io/issuer: letsencrypt-production
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - www.holyjack.dev
        - holyjack.dev
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
          - path: /assets/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
          - path: /auth
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 80
